--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha backend/tests/* --timeout 10000",
     "start": "node backend/index.js",
     "build": "cd frontend && npm install && npm run build"
   },
@@ -15,5 +15,10 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.0"
   }
 }
